Action Bar fix to center on mobile

--- a/less/uams.actionbar.less
+++ b/less/uams.actionbar.less
@@ -13,21 +13,22 @@
 		ul {
 	    	padding: 0;
 			list-style: none;
+			text-align: center;
 			li {
-				&.ab-1_3 a { width: 33%; }
-				&.ab-1_4 a { width: 25%; }
-				&.ab-1_5 a { width: 20%; }
-				&.ab-1_6 a { width: 16%; }
+				display: inline-block;
+				&.ab-1_3 { width: 32%; }
+				&.ab-1_4 { width: 24%; }
+				&.ab-1_5 { width: 19%; }
+				&.ab-1_6 { width: 15%; }
 				a {
 				    font-family: "Fira Sans",sans-serif;
 				    color: @red;
 				    font-weight: 800;
 				    text-align: center;
 				    display: block;
-				    //width: 14%;
 				    float: left;
 				    padding: 10px 0 0;
-				    margin: 35px 0 40px;
+				    margin: 35px 0 10px;
 				    -moz-box-sizing: border-box;
 				    -webkit-box-sizing: border-box;
 				    box-sizing: border-box;
@@ -35,12 +36,14 @@
 				    border-right: 1px solid #EBEBEB;
 				    transition: all .1s ease-in-out;
 				    line-height: 1.3;
+				    width: 100%;
 				    &:focus,
 				    &:hover{ text-decoration:none; border-bottom: none; }
 
 				    span {
 					    display: block;
 						margin-top: 10px;
+						min-height: 2.5em;
 				    }
 				    .icon {
 					    margin-top: 0;
@@ -68,14 +71,14 @@
 		margin-top: 0;
 		ul li {
 	    padding: 0 5%;
-	    	&.ab-1_3 a,
-			&.ab-1_4 a,
-			&.ab-1_5 a,
-			&.ab-1_6 a { width: 23%; }
+	    	&.ab-1_3,
+			&.ab-1_6 { width: 32%; }
+			&.ab-1_4,
+			&.ab-1_5 { width: 49%; }
 		    a {
-			   	width: 23%;
-			    padding: 10px 0;
-			    margin: 10px 5%;
+			   	//width: 23%;
+			    padding: 10px 0 0;
+			    margin: 10px 5% 0;
 			    font-size: 13px;
 			    line-height: 14px;
 			    border-right: none;
@@ -85,6 +88,10 @@
 }
 }
 @media only screen and (max-width: 360px) {
+	.full-bar .action-bar ul li{
+		&.ab-1_3,
+		&.ab-1_6 { width: 49%; }
+	}
 	.full-bar .action-bar ul li a .icon:before { font-size: 48px; }
 }
 
